[gd_scene load_steps=2 format=3 uid="uid://achievement_popup_ui"]

[ext_resource type="Script" path="res://game/scripts/ui/AchievementPopupUI.gd" id="1_script"]

[node name="AchievementPopupUI" type="CanvasLayer"]
layer = 130
process_mode = 3
script = ExtResource("1_script")

[node name="PopupPanel" type="PanelContainer" parent="."]
offset_left = 140.0
offset_top = 10.0
offset_right = 372.0
offset_bottom = 60.0

[node name="HBox" type="HBoxContainer" parent="PopupPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IconLabel" type="Label" parent="PopupPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚≠ê"

[node name="VBox" type="VBoxContainer" parent="PopupPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="PopupPanel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 8
text = "Achievement Unlocked!"

[node name="DescriptionLabel" type="Label" parent="PopupPanel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 6
text = "Description goes here"

[node name="PointsLabel" type="Label" parent="PopupPanel/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "+10"
